# ViewFS

./: CMakeLists.txt  IFileSource.h  PlatformUtils.cpp  PlatformUtils.h  ProjFSBase.cpp  ProjFSBase.h  PythonSubprocessSource.cpp  PythonSubprocessSource.h  Utils.cpp  Utils.h  ViewFS_python_host.py  WinUtils.h  main.cpp  sample_fs_router.py  vcpkg.json  winapi_headers.h
windows/: HardlinkFrontend.cpp  HardlinkFrontend.h  NamedPipe.cpp  NamedPipe.h  ProjFSBase.h  ProjFSFrontend.cpp  ProjFSFrontend.h  Subprocess.cpp  Subprocess.h  WinUtils.cpp  WinUtils.h  winapi_headers.h
